deployment/kubernetes/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: markitos-it-svc-documents-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: markitos-it-svc-documents-pods
  template:
    metadata:
      labels:
        app: markitos-it-svc-documents-pods
    spec:
      imagePullSecrets:
      - name: gcp-artifact-registry-secret
      containers:
      - name: markitos-it-svc-documents-container
        image: europe-southwest1-docker.pkg.dev/markitos-it-images/private/markitos-it-svc-documents:1.0.0
        ports:
        - containerPort: 8888
          name: grpc
        readinessProbe:
          tcpSocket:
            port: 8888
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          tcpSocket:
            port: 8888
          initialDelaySeconds: 15
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: markitos-it-svc-documents-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: markitos-it-svc-documents-pods
  ports:
  - port: 8888
    targetPort: 8888
    protocol: TCP
    name: grpc
    appProtocol: kubernetes.io/h2c
---
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: markitos-it-svc-documents-grpcroute
  namespace: default
spec:
  parentRefs:
  - name: home-gateway
    namespace: nginx-gateway
  hostnames:
  - "grpc.markitos.local"
  rules:
  - backendRefs:
    - name: markitos-it-svc-documents-service
      port: 8888
